[gd_scene load_steps=3 format=3 uid="uid://visil70l6to3"]

[ext_resource type="Script" path="res://scenes/menu/settings_menu.gd" id="1_2haom"]
[ext_resource type="PackedScene" uid="uid://dm2xyexrsgcxx" path="res://scenes/menu/volume_control.tscn" id="1_r43os"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2haom")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_vertical = 0
text = "Settings"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "Back"

[node name="AudioSettings" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.227
offset_bottom = 136.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="AudioSettings/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="VolumeControls" type="VBoxContainer" parent="AudioSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VolumeControl" parent="AudioSettings/VBoxContainer/VolumeControls" instance=ExtResource("1_r43os")]
layout_mode = 2

[node name="VolumeControl2" parent="AudioSettings/VBoxContainer/VolumeControls" instance=ExtResource("1_r43os")]
layout_mode = 2
bus_name = "Sfx"

[node name="VolumeControl3" parent="AudioSettings/VBoxContainer/VolumeControls" instance=ExtResource("1_r43os")]
layout_mode = 2
bus_name = "Music"

[node name="VideoSettings" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
offset_top = -7.40001
offset_bottom = 115.6
grow_horizontal = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VideoSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoSettings/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="VideoControls" type="VBoxContainer" parent="VideoSettings/VBoxContainer"]
layout_mode = 2

[node name="FullscreenControl" type="HBoxContainer" parent="VideoSettings/VBoxContainer/VideoControls"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoSettings/VBoxContainer/VideoControls/FullscreenControl"]
layout_mode = 2
text = "Fullscreen
"

[node name="Control" type="Control" parent="VideoSettings/VBoxContainer/VideoControls/FullscreenControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenCheckBox" type="CheckBox" parent="VideoSettings/VBoxContainer/VideoControls/FullscreenControl"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScreenSizeControl" type="HBoxContainer" parent="VideoSettings/VBoxContainer/VideoControls"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoSettings/VBoxContainer/VideoControls/ScreenSizeControl"]
layout_mode = 2
text = "Windowed"

[node name="Control" type="Control" parent="VideoSettings/VBoxContainer/VideoControls/ScreenSizeControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionOptions" type="OptionButton" parent="VideoSettings/VBoxContainer/VideoControls/ScreenSizeControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VSyncControl" type="HBoxContainer" parent="VideoSettings/VBoxContainer/VideoControls"]
layout_mode = 2

[node name="Label" type="Label" parent="VideoSettings/VBoxContainer/VideoControls/VSyncControl"]
layout_mode = 2
text = "VSync
"

[node name="Control" type="Control" parent="VideoSettings/VBoxContainer/VideoControls/VSyncControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSyncCheckBox" type="CheckBox" parent="VideoSettings/VBoxContainer/VideoControls/VSyncControl"]
unique_name_in_owner = true
layout_mode = 2

[node name="InputSettings" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.0
offset_bottom = 275.0
grow_horizontal = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="InputSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="InputSettings/VBoxContainer"]
layout_mode = 2
text = "Keybindings"

[node name="ScrollContainer" type="ScrollContainer" parent="InputSettings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Keybinds" type="VBoxContainer" parent="InputSettings/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="InputSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Reset keybinds to deafult"
